# calkulate

./: .gitignore  .zenodo.json  404.html  CNAME  CalkCRM.m  Calkulate.m  Calkulate_example.m  LICENSE  PC_LIMS_Report-CRM1-20201211-115353.txt  README.md  Ruth.py  acid_density.m  aimeetesting.m  calkDickson1981.py  calk_matlab.m  calk_partest.m  calk_partest.py  calk_ptl.m  calk_simtit.m  calkfig_d81.m  calkviz.py  coverage.sh  density_estimator.py  dickson81tit.m  dickson81tit.py  example0.py  example1.py  example2.py  example3.py  go_calkulate.py  gocalk_CRM.py  index.html  mactesting.m  methodcomp.py  mkdocs.yml  multidats.py  pyproject.toml  pytest.ini  requirements.txt  rho_acid.m  (+12 more)
.misc/: coverage.txt
calk_MATLAB/: calk_Dickson1981.m  calk_VINDTA.m  calk_VINDTA_CRM.m  calk_VINDTA_CRM_utest.txt  calk_initpy.m
calkulate/: VINDTA.py  __init__.py  calib.py  calibrate.py  classes.py  conc.py  concentrations.py  const.py  constants.py  convert.py  core.py  dataset.py  datasets.py  dataviz.py  datfile.py  default.py  dens.py  density.py  dissoc.py  dissociation.py  files.py  gettit.py  interface.py  io.py  loss.py  meta.py  options.py  plot.py  read.py  settings.py  sim.py  simulate.py  solve.py  solvers.py  titration.py  types.py  vindta.py
datfiles/: exampleDataset.csv  exampleDatasetCal.csv  exampleDataset_calibrated.csv
docs/: Calkulate.bib  Calkulate.tex  calibration.md  concentrations.md  conventions.md  datasets.md  dissociation.md  examples.md  index.md  inputs.md  io.md  metadata.md  methods.md  plot.md  python.md  read.md  references.md  requirements.txt  solvers.md  titrations.md  validate.md  version-history.md  versions.md
examples/: compare-all-solvers.py  dataset-loop.py  pyco2sys-testing.py  resimulate-d81.py  self-calibrate-crm.py  simulate-real-titration.py  stepwise-alkalinity.py
matlab/: calk_Dickson1981.m  calk_EMF2H.m  calk_H2EMF.m  calk_dens_acid.m  calk_dens_sw.m  calk_getdat.m  calk_guessGran.m  calk_initpy.m  calk_nolegend.m  calk_ptl.m  calk_simAT.m  calk_simH.m
metadata/: index.html
methods/: index.html
misc/: coverage.txt
plot/: index.html
read/: index.html
references/: index.html
search/: search_index.json
tests/: _test_core_new.py  _test_dataset_pH_scales.py  _test_experiment.py  _test_files.py  _test_loss_simulation.py  _test_new_Titration.py  _test_pH.py  _test_pH_scales_simulated_titration.py  _test_simulate_sulfate.py  _test_titration_class.py  test_Dickson1981.py  test_SOP3b.py  test_calibration.py  test_conversions.py  test_convert.py  test_core.py  test_dataset_io.py  test_dataset_manual.py  test_dataset_pH_scales.py  test_dbs.py  test_dbs_calk.py  test_density.py  test_io.py  test_io_TiTouch.py  test_io_dat.py  test_io_dataset.py  test_io_single_dataset.py  test_irlon.py  test_js_geomar.py  test_loss_simulation.py  test_manual_self_calibration.py  test_metadata.py  test_misc.py  test_oberlin.py  test_plot_single.py  (+12 more)
(+105 files in other folders)
