[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
name = "Calkulate"
description = "Calkulate: seawater total alkalinity from titration data"
readme = "README.md"
dependencies = [
    "PyCO2SYS",
    "matplotlib",
    "numpy",
    "openpyxl",
    "pandas",
    "scipy",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dynamic = ["version"]

[tool.setuptools.packages.find]
include = ["calkulate*"]

[tool.setuptools.dynamic]
version = {attr = "calkulate.meta.__version__"}