[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
name = "Calkulate"
description = "Calkulate: seawater total alkalinity from titration data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyCO2SYS >= 1.8, < 2",
    "matplotlib",
    "numpy",
    "openpyxl",
    "pandas",
    "scipy",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Oceanography",
]
dynamic = ["version"]

[tool.setuptools.packages.find]
include = ["calkulate*"]

[tool.setuptools.dynamic]
version = {attr = "calkulate.meta.__version__"}

[tool.ruff]
line-length = 79

[tool.ruff.lint.isort]
combine-as-imports = true
force-single-line = false
lines-after-imports = 2
